@@ -13,6 +13,12 @@ VDR 1.7.29+
 	In recordings listing there is an other sublevel for directories, (use subgroup_old = 0 for old version)
 	In recordings listing, first sub directory is shown in Header
 	Removed some old, not in use, code for recordings listings
+	Better support for local recordings, (only 1 local recording is possible)
+	<Menu><2> local timers show also local recordings, <OK> or <PLAY> to play.
+	Removal of local recordings now possible
+	Localrecordings support FF/REW but also the jump in time with 1/4/7 and 3/6/9
+	Local recordings time is corrected when watching a local recording. Overview shows epg duration. 
+	Changed the color of the infowindow to 'Green' // Infowindow is now 'Red' in case of error, warning or if User attention is needed.
 
 0.24	vip.getmarks used for selecting getmarks 0 = restfulapi, 1 = SmartTVWeb (not all users have the newest SmartTVWeb)
 	Channels update.
